[package]
name = "horizon-rpc"
version = "0.1.0"
edition = "2021"
description = "JSON-RPC server that uses Stellar Horizon API as data source"

[dependencies]
actix-web = "4.4"
jsonrpsee = { version = "0.20", features = ["server", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
url = "2.4"
anyhow = "1.0"
stellar-xdr = "20.1"
